--- a/src/pug/components/dynamic/links/main-link.pug
+++ b/src/pug/components/dynamic/links/main-link.pug
@@ -1,8 +1,7 @@
 include ../svg-icon/svg-icon
 
 mixin main-link(data)
-  -console.log(data)
-  a(href= data.href class= data.modifier ? data.modifier : '').main-link
+  a(href= data.href class= data.class ? data.class : null).main-link
     if data.icon
       +svg-icon({
         name: data.icon,
