--- a/src/styles/variables/root/_typography.scss
+++ b/src/styles/variables/root/_typography.scss
@@ -2,14 +2,15 @@
   --primary-font: 'StalinistOne', sans-serif;
   --secondary-font: 'Inter', sans-serif;
 
-  // --accent-font: "", sans-serif;
-
+  // font sizes
   --fs-xl: clamp(36px, 5vw, 64px);
   --fs-lg: clamp(20px, 4vw, 48px);
   --fs-md: clamp(18px, 3vw, 32px);
   --fs-sm: clamp(16px, 3vw, 20px);
   --fs-xs: 12px;
   --fs-xxs: 10px;
+
+  // font weights
   --fw-h: 900; // heavy
   --fw-xb: 800; // extra bold
   --fw-b: 700; // bold
@@ -19,12 +20,16 @@
   --fw-l: 300; // light
   --fw-xl: 200; // extra light
   --fw-t: 100; // thin
+
+  // line heights
   --base-line-height: 1.2;
+
+  // main styles
   --main-title-fs: var(--fs-lg);
   --main-title-fw: var(--fw-b);
   --base-title-fs: var(--fs-md);
   --base-title-fw: var(--fw-m);
-  --main-text-fs: calc(var(--fs-md) / 0.8);
+  --main-text-fs: calc(var(--fs-md) / 1.3);
   --base-text-fs: var(--fs-sm);
   --main-title-color: var(--primary);
   --base-title-color: var(--primary);
