--- a/src/pug/layouts/base-section/base-section.pug
+++ b/src/pug/layouts/base-section/base-section.pug
@@ -1,4 +1,7 @@
-section.base-section
+block variables
+  - sectionClass = ''
+
+section.base-section(class= sectionClass)
   .container
     .base-section__grid
       .base-section__grid-side
