--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -17,6 +17,10 @@
 @import '../pug/components/dynamic/main-btn/main-btn';
 @import '../pug/components/dynamic/social/social';
 @import '../pug/components/static/company/contacts/company-contacts';
+@import '../pug/components/dynamic/cards/info-card/info-card';
 
 // sections
 @import '../pug/sections/index-page/hero';
+@import '../pug/sections/index-page/features';
+@import '../pug/sections/index-page/about';
+@import '../pug/sections/index-page/workflow';
