--- a/src/pug/content/about-list.pug
+++ b/src/pug/content/about-list.pug
@@ -44,7 +44,7 @@
 
     {
       title: 'Контекстная реклама',
-      text: 'Настраиваем, запускаем и вносим корректировки в процессе. <br><small>*Подходит для всех видов сайтов.</small>',
+      text: 'Настраиваем, запускаем и вносим корректировки в процессе. <br><small>*Подойдет для всех видов сайтов.</small>',
       link: '#',
       linkText: 'Подробнее'
     },
@@ -64,6 +64,6 @@
     },
 
     {
-      text: 'Также мы можем добавить анимации любой сложности, сделать полный аудит сайта, интегрирровать необходимые Вашему бизнесу решения, исправить проблемы на Вашем текущем сайте.',
+      text: 'А еще мы можем добавить анимации любой сложности, сделать полный аудит сайта, интегрирровать необходимые Вашему бизнесу решения, исправить проблемы на Вашем текущем сайте.',
     }
   ]
