--- a/src/pug/sections/index-page/offer.pug
+++ b/src/pug/sections/index-page/offer.pug
@@ -1,7 +1,8 @@
 extends ../../layouts/base-section/base-section.pug
 
 block left
-  h1.base-title Давайте работать над вашим проектом вместе!
+  h1.base-title Интересно ?
 
 block right
-  p test2
+  include ../../components/static/forms/offer-form
+
