--- a/src/pug/components/dynamic/cards/info-card/_info-card.scss
+++ b/src/pug/components/dynamic/cards/info-card/_info-card.scss
@@ -3,9 +3,10 @@ $border-color: transparent;
 $border-radius: 10px;
 
 .info-card {
-  display: flex;
+  @extend %flex-column;
+
   gap: var(--gap-l);
-  padding: var(--gap-m);
+  padding: 0;
   border-radius: $border-radius;
   border: $border;
   border-color: $border-color;
@@ -42,6 +43,10 @@ $border-radius: 10px;
     display: inline-block;
     margin-top: 10px;
     font-size: var(--fs-xs);
+  }
+
+  @include media-up($mobile-width) {
+    flex-direction: row;
   }
 
   &--vertical {
