--- a/src/pug/content/workflow-list.pug
+++ b/src/pug/content/workflow-list.pug
@@ -2,40 +2,40 @@
   const workflowList = [
     {
       icon: 'workflow-icon-1.svg',
-      title: 'Делаем пресейл',
-      text: 'За 1 день оцениваем проект вилкой, определяем сложность и собираем команду, которая лучше справится с этим проектом.'
+      title: 'Предварительно оцениваем',
+      text: 'Оцениваем проект вилкой, определяем сложность и предлагаем варианты реализации.'
     },
 
     {
       icon: 'workflow-icon-2.svg',
-      title: 'Согласовываем тонкости',
-      text: 'Команда внимательно изучает проект, задаёт вопросы и уточняет оценку.',
+      title: 'Согласовываем нюансы',
+      text: 'Внимательно изучаем проект, задаем вопросы, составляем план работ.',
     },
 
     {
       icon: 'workflow-icon-3.svg',
-      title: 'Запускаем проект',
-      text: 'К этому времени договор согласован, поэтому мы начинаем работу. Создаём чат для оперативного общения и добавляем туда необходимых.',
+      title: 'Запускаем проект в работу',
+      text: 'Договор согласован и подписан, поэтому мы начинаем работу. При необходимости создаём чат для оперативного общения между клиентом и командой разработки.',
     },
 
     {
       icon: 'workflow-icon-4.svg',
       title: 'Работаем над проектом',
-      text: 'Пишем код в согласованном процессе, показываем промежуточный результат, тестируем, задаём вопросы.',
+      text: 'Работаем в согласованном процессе, показываем промежуточный результат, тестируем, задаём вопросы.',
     },
 
     {
       icon: 'workflow-icon-5.svg',
-      title: 'Финальное тестирование',
-      text: 'Перед сдачей проекта отдаём на полное финальное тестирование, полируем и отдаём.',
+      title: 'Тестируем',
+      text: 'Перед сдачей, делаем финальное тестирование и отдаём.',
     },
     {
       icon: 'workflow-icon-6.svg',
       title: 'Сопровождаем после сдачи',
-      text: 'Остаёмся на связи пока проект не будет в релизе, даём гарантию 60 дней.',
+      text: 'Остаёмся на связи по проекту до запуска и даём гарантию на 60 дней после.',
     },
   ]
 
-  
+
 
 
