--- a/src/pug/sections/index-page/_features.scss
+++ b/src/pug/sections/index-page/_features.scss
@@ -1,8 +1,5 @@
 .features {
   &__list {
-    @extend %list-reset;
-    @extend %flex-column;
-
-    gap: var(--gap-xl);
+    @extend %base-section-list;
   }
 }
