--- a/src/styles/variables/root/_colors.scss
+++ b/src/styles/variables/root/_colors.scss
@@ -4,7 +4,8 @@
 
   // --success: #28a745;
   // --warning: #ffc107;
-  // --danger: #dc3545;
+  --danger: #dc3545;
+
   // --info: #17a2b8;
   // --light: #f8f9fa;
   --dark: #161414;
