--- a/src/pug/layouts/base-section/_base-section.scss
+++ b/src/pug/layouts/base-section/_base-section.scss
@@ -12,6 +12,7 @@
 
     &-side {
       height: fit-content;
+      min-width: 100%;
 
       @include media-up($laptop-width) {
         position: sticky;
