--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -16,12 +16,15 @@
 @import '../pug/components/dynamic/social/social';
 @import '../pug/components/static/company/contacts/company-contacts';
 @import '../pug/components/dynamic/cards/info-card/info-card';
+@import '../pug/components/dynamic/cards/review-card/review-card';
 @import '../pug/components/static/forms/offer-form';
+@import '../pug/components/dynamic/accordeons/main-accordeon/main-accordeon';
 
 // controls
 @import '../pug/components/dynamic/links/main-link';
 @import '../pug/components/dynamic/main-btn/main-btn';
 @import '../pug/components/dynamic/controls/input-type-text/input-type-text';
+@import '../pug/components/dynamic/sliders/main-slider/main-slider';
 
 // sections
 @import '../pug/sections/index-page/hero';
