--- a/src/pug/sections/index-page/workflow.pug
+++ b/src/pug/sections/index-page/workflow.pug
@@ -8,7 +8,7 @@ block left
   h1.base-title Как происходит рабочий процесс
 
   +main-btn({
-    class: 'main-btn--outlined',
+    class: 'main-btn--outlined hidden-laptop-down',
     text: 'Связаться с нами',
     modal: 'callback'
   })
@@ -23,7 +23,7 @@ block right
         +info-card(workflow)
 
   +main-btn({
-    class: 'main-btn--outlined',
+    class: 'main-btn--outlined hidden-laptop-up',
     text: 'Связаться с нами',
     modal: 'callback'
   })
