--- a/src/styles/base/_animations.scss
+++ b/src/styles/base/_animations.scss
@@ -15,3 +15,13 @@
     transform: translateX(-8px);
   }
 }
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
