--- a/src/pug/sections/index-page/offer.pug
+++ b/src/pug/sections/index-page/offer.pug
@@ -4,5 +4,29 @@ block left
   h1.base-title Интересно ?
 
 block right
-  include ../../components/static/forms/offer-form
+  p.base-text Оставьте заявку и мы свяжемся с Вами в ближайшее время !
+  include ../../components/forms/callback-form/callback-form
+
+  +callback-form({
+    submitBtnText: 'Отправить',
+    formName: 'Оставить заявку',
+    rows: [
+      [
+        {
+          type: 'text',
+          id: 'offer_user_name',
+          label: 'Имя:',
+          required: true
+        },
+
+        {
+          type: 'tel',
+          id: 'offer_user_phone',
+          label: 'Телефон:',
+          dataType: 'phone',
+          required: true
+        }
+      ]
+    ]
+  })
 
