--- a/src/pug/components/sliders/main-slider/main-slider.pug
+++ b/src/pug/components/sliders/main-slider/main-slider.pug
@@ -18,6 +18,11 @@ mixin main-slider(data)
       if data.options.navigation
         .swiper-navigation
           .swiper-button-prev
+            svg(width="16" height="16")
+              use(xlink:href="../assets/svg-sprite.svg#icon-slider-arrow")
           .swiper-button-next
+            svg(width="16" height="16")
+              use(xlink:href="../assets/svg-sprite.svg#icon-slider-arrow")
+
 
 
