--- a/src/pug/content/feature-list.pug
+++ b/src/pug/content/feature-list.pug
@@ -1,28 +1,28 @@
 -
   const featureList = [
     {
-      icon: 'feature-icon-1.svg',
+      icon: 'feature-1',
       title: 'Быстро запускаем проекты в работу',
       modifier: 'vertical',
       text: 'Оперативно оценим проект, заключим договор, подпишем NDA при необходимости.'
     },
 
     {
-      icon: 'feature-icon-2.svg',
+      icon: 'feature-2',
       title: 'Индивидуальный подход к каждому',
       modifier: 'vertical',
       text: 'Мы с радостью разработаем уникальный дизайн сайта, который отобразит вашу уникальность и удовлетворит все ваши пожелания.',
     },
 
     {
-      icon: 'feature-icon-3.svg',
+      icon: 'feature-3',
       title: 'Честность по отношению к себе и клиенту',
       modifier: 'vertical',
       text: 'Искренность в каждом действии - ключ к успешным взаимоотношениям с клиентом, продуктивно влияющим на наш бизнес.',
     },
 
     {
-      icon: 'feature-icon-4.svg',
+      icon: 'feature-4',
       title: 'Справедливая рыночная цена',
       modifier: 'vertical',
       text: 'Обеспечим достойное качество, которое соответсвует реальной стоимости услуг и является разумным для клиентов.',
