--- a/src/pug/components/cards/info-card/info-card.pug
+++ b/src/pug/components/cards/info-card/info-card.pug
@@ -1,10 +1,15 @@
 mixin info-card(data)
   .info-card(class= data.modifier ? `info-card--${data.modifier}` : null)
     if data.icon
-      img(src=`./assets/images/mock/${data.icon}` alt="Иконка преимущества" width="50" height="50").info-card-icon
+      svg(width="50" height="50")
+        use(xlink:href=`../assets/svg-sprite.svg#icon-${data.icon}`)
+      //- img(src=`./assets/images/mock/${data.icon}` alt="Иконка преимущества" width="50" height="50").info-card-icon
     .info-card__content
         span.info-card-title!= data.title
         span.info-card-text!= data.text
 
         if data.link
           a(href= data.link)!= data.linkText
+
+        if data.note
+          small!= data.note
