--- a/src/pug/components/loaders/_loader.scss
+++ b/src/pug/components/loaders/_loader.scss
@@ -7,7 +7,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgb(0 0 0 / 80%);
   z-index: 9999;
 
   &.active {
