--- a/src/pug/sections/index-page/_about.scss
+++ b/src/pug/sections/index-page/_about.scss
@@ -1,5 +1,11 @@
 .about {
   &__list {
     @extend %base-section-list;
+
+    & + .base-text {
+      font-family: var(--secondary-font);
+      margin-bottom: 0;
+      font-size: 14px;
+    }
   }
 }
