--- a/src/styles/variables/root/_typography.scss
+++ b/src/styles/variables/root/_typography.scss
@@ -1,10 +1,10 @@
 :root {
-  --primary-font: 'StalinistOne', sans-serif;
-  --secondary-font: 'Inter', sans-serif;
+  --primary-font: 'Furore', sans-serif;
+  --secondary-font: 'Montserrat', sans-serif;
 
   // font sizes
   --fs-xl: clamp(36px, 5vw, 64px);
-  --fs-lg: clamp(20px, 4vw, 48px);
+  --fs-lg: clamp(24px, 6vw, 52px);
   --fs-md: clamp(16px, 2.8vw, 24px);
   --fs-sm: clamp(14px, 2.4vw, 18px);
   --fs-xs: 12px;
@@ -27,7 +27,7 @@
   // main styles
   --main-title-fs: var(--fs-lg);
   --main-title-fw: var(--fw-b);
-  --base-title-fs: var(--fs-md);
+  --base-title-fs: var(--fs-lg);
   --base-title-fw: var(--fw-m);
   --main-text-fs: calc(var(--fs-md) / 1.3);
   --base-text-fs: var(--fs-sm);
